--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>qpickr</title>
+<style>body { text-align: center; }</style>
 </head>
 <body>
     <h1><img src="logo.svg" alt="qpickr" /></h1>
